--- a/diy.html
+++ b/diy.html
@@ -65,6 +65,26 @@ section{padding:1rem;border-bottom:10px solid pink;}
 
 
 <section>
+  <div class="toggle section-header" onclick="toggle('bigTaskSection')">Big Tasks</div>
+  <div id="bigTaskSection" class="hidden">
+    <div id="bigTaskList"></div>
+    <div class="toggle add-toggle" onclick="toggle('addBigTaskForm')">Add Big Task</div>
+    <div id="addBigTaskForm" class="hidden form-grid">
+      <label>Name<input type="text" id="bigTaskName"></label>
+      <label>Project<select id="bigTaskProject"></select></label>
+      <label>Type<select id="bigTaskType"></select></label>
+      <label>Due Date<input type="date" id="bigTaskDue"></label>
+      <label><input type="checkbox" id="bigTaskUrgent"> Urgent</label>
+      <label>Info<textarea id="bigTaskInfo"></textarea></label>
+      <div style="grid-column:1/-1;text-align:center;">
+        <button onclick="addBigTask()">Submit</button>
+      </div>
+    </div>
+  </div>
+</section>
+
+
+<section>
   <div class="toggle section-header" onclick="toggle('calendarSection')">Calendar</div>
   <div id="calendarSection" class="hidden">
     <div class="calendar-container">
@@ -90,6 +110,24 @@ section{padding:1rem;border-bottom:10px solid pink;}
   </div>
 </section>
 
+<section>
+  <div class="toggle section-header" onclick="toggle('diyShopSection')">DIY Shopping List</div>
+  <div id="diyShopSection" class="hidden">
+    <div id="diyShoppingList"></div>
+    <div class="toggle add-toggle" onclick="toggle('addDiyShop')">Add Item</div>
+    <div id="addDiyShop" class="hidden form-grid">
+      <label>Name<input type="text" id="diyShopName"></label>
+      <label>Project<select id="diyShopProject"></select></label>
+      <label>Type<select id="diyShopType"></select></label>
+      <label>Cost<input type="number" id="diyShopCost" step="0.01"></label>
+      <label>Target Month<input type="month" id="diyShopMonth"></label>
+      <div style="grid-column:1/-1;text-align:center;">
+        <button onclick="addDiyShopItem()">Submit</button>
+      </div>
+    </div>
+  </div>
+</section>
+
 <div id="taskModal" class="modal hidden">
   <div class="modal-content">
     <label>Name<input id="taskModalName"></label>
@@ -110,6 +148,8 @@ let store={};
 let diyProjects=[];
 let diyTypes=[];
 let diyTasks=[];
+let diyBigTasks=[];
+let diyShoppingList=[];
 let diyNextId=1;
 let maxSubDepth=7;
 let calendarEvents=[];
@@ -130,6 +170,8 @@ async function loadData(){
       diyProjects=store.diyProjects||[];
       diyTypes=store.diyTypes||[];
       diyTasks=store.diyTasks||[];
+      diyBigTasks=store.diyBigTasks||[];
+      diyShoppingList=store.diyShoppingList||[];
       diyNextId=store.diyNextId||1;
       maxSubDepth=store.maxSubDepth||7;
       calendarEvents=store.calendarEvents||[];
@@ -138,6 +180,8 @@ async function loadData(){
     renderProjects();
     renderTypes();
     renderTasks();
+    renderBigTasks();
+    renderDiyShopping();
     renderCalendarTasks();
     initCalendar();
   }catch(e){console.error('load fail',e);}
@@ -147,6 +191,8 @@ async function saveData(){
   store.diyProjects=diyProjects;
   store.diyTypes=diyTypes;
   store.diyTasks=diyTasks;
+  store.diyBigTasks=diyBigTasks;
+  store.diyShoppingList=diyShoppingList;
   store.diyNextId=diyNextId;
   store.maxSubDepth=maxSubDepth;
   store.calendarEvents=calendarEvents;
@@ -170,11 +216,15 @@ function renderProjects(){
   const ul=document.getElementById('diyProjectList');
   const sel=document.getElementById('taskProject');
   const sel2=document.getElementById('taskModalProject');
+  const bigSel=document.getElementById('bigTaskProject');
+  const shopSel=document.getElementById('diyShopProject');
   const filt=document.getElementById('filterProject');
-  ul.innerHTML=''; sel.innerHTML=''; sel2.innerHTML=''; filt.innerHTML='<option value="all">All</option>';
+  ul.innerHTML=''; sel.innerHTML=''; sel2.innerHTML=''; if(bigSel) bigSel.innerHTML=''; if(shopSel) shopSel.innerHTML=''; filt.innerHTML='<option value="all">All</option>';
   diyProjects.forEach(p=>{
     const li=document.createElement('li'); li.style.color=p.color; li.textContent=p.name; ul.appendChild(li);
     const opt=document.createElement('option'); opt.value=p.name; opt.textContent=p.name; sel.appendChild(opt); sel2.appendChild(opt.cloneNode(true));
+    if(bigSel) bigSel.appendChild(opt.cloneNode(true));
+    if(shopSel) shopSel.appendChild(opt.cloneNode(true));
     const opt2=opt.cloneNode(true); filt.appendChild(opt2);
   });
 }
@@ -192,10 +242,16 @@ function renderTypes(){
   const ul=document.getElementById('typeList');
   const sel=document.getElementById('taskType');
   const sel2=document.getElementById('taskModalType');
+  const bigSel=document.getElementById('bigTaskType');
+  const shopSel=document.getElementById('diyShopType');
   ul.innerHTML=''; sel.innerHTML=''; sel2.innerHTML='';
+  if(bigSel) bigSel.innerHTML='';
+  if(shopSel) shopSel.innerHTML='';
   diyTypes.forEach(t=>{
     const li=document.createElement('li'); li.textContent=t; ul.appendChild(li);
     const opt=document.createElement('option'); opt.value=t; opt.textContent=t; sel.appendChild(opt); sel2.appendChild(opt.cloneNode(true));
+    if(bigSel) bigSel.appendChild(opt.cloneNode(true));
+    if(shopSel) shopSel.appendChild(opt.cloneNode(true));
   });
 }
 
@@ -361,6 +417,82 @@ function saveCalendar(){calendarEvents=calendar.getEvents().map(ev=>({id:ev.id,t
 function deleteCalendarEvents(taskId){if(!calendar) return; calendar.getEvents().forEach(ev=>{if(ev.extendedProps.taskId===taskId) ev.remove();}); saveCalendar();}
 function showInfo(t){
   alert(`Name: ${t.name}\nProject: ${t.project}\nType: ${t.type}\nDue: ${t.dueDate||''}\nUrgent: ${t.urgent?'Yes':'No'}\nInfo: ${t.info||''}`);
+}
+
+function addBigTask(){
+  const name=document.getElementById('bigTaskName').value.trim();
+  if(!name) return;
+  const task={id:String(diyNextId).padStart(8,'0'),name,project:document.getElementById('bigTaskProject').value,type:document.getElementById('bigTaskType').value,dueDate:document.getElementById('bigTaskDue').value,urgent:document.getElementById('bigTaskUrgent').checked,info:document.getElementById('bigTaskInfo').value,status:'open'};
+  diyNextId++; diyBigTasks.push(task);
+  document.getElementById('bigTaskName').value='';
+  document.getElementById('bigTaskDue').value='';
+  document.getElementById('bigTaskUrgent').checked=false;
+  document.getElementById('bigTaskInfo').value='';
+  saveData();
+  renderBigTasks();
+}
+
+function renderBigTasks(){
+  const div=document.getElementById('bigTaskList');
+  div.innerHTML='';
+  const open=diyBigTasks.filter(t=>t.status==='open');
+  if(open.length===0){div.textContent='No big tasks';return;}
+  open.forEach(t=>{
+    const row=document.createElement('div'); row.className='task-row';
+    row.innerHTML=`<div>${t.name}</div><div>${t.project}</div><div>${t.type}</div><div>${t.dueDate||''}</div><div>${t.urgent?'Y':'N'}</div>`;
+    const ctrl=document.createElement('div'); ctrl.className='controls';
+    const info=document.createElement('button'); info.textContent='Info'; info.onclick=()=>showInfo(t);
+    const comp=document.createElement('button'); comp.textContent='Complete'; comp.onclick=()=>completeBigTask(t.id);
+    const del=document.createElement('button'); del.textContent='Delete'; del.onclick=()=>deleteBigTask(t.id);
+    ctrl.appendChild(info); ctrl.appendChild(comp); ctrl.appendChild(del);
+    row.appendChild(ctrl); div.appendChild(row);
+  });
+}
+
+function completeBigTask(id){
+  const t=diyBigTasks.find(x=>x.id===id); if(!t) return; t.status='closed'; saveData(); renderBigTasks();
+}
+
+function deleteBigTask(id){
+  const idx=diyBigTasks.findIndex(x=>x.id===id); if(idx===-1) return; diyBigTasks.splice(idx,1); saveData(); renderBigTasks();
+}
+
+function addDiyShopItem(){
+  const name=document.getElementById('diyShopName').value.trim();
+  if(!name) return;
+  const item={id:String(diyNextId).padStart(8,'0'),name,project:document.getElementById('diyShopProject').value,type:document.getElementById('diyShopType').value,cost:document.getElementById('diyShopCost').value,month:document.getElementById('diyShopMonth').value,bought:false};
+  diyNextId++; diyShoppingList.push(item);
+  document.getElementById('diyShopName').value='';
+  document.getElementById('diyShopCost').value='';
+  document.getElementById('diyShopMonth').value='';
+  saveData();
+  renderDiyShopping();
+}
+
+function renderDiyShopping(){
+  const div=document.getElementById('diyShoppingList');
+  div.innerHTML='';
+  const open=diyShoppingList.filter(i=>!i.bought);
+  if(open.length===0){div.textContent='No items';return;}
+  const table=document.createElement('table'); table.className='task-table';
+  const head=document.createElement('tr'); head.innerHTML='<th>Item</th><th>Project</th><th>Type</th><th>Cost</th><th>Month</th><th></th>'; table.appendChild(head);
+  open.forEach(it=>{
+    const tr=document.createElement('tr'); const proj=diyProjects.find(p=>p.name===it.project); const color=proj?proj.color:'#000';
+    tr.innerHTML=`<td>${it.name}</td><td style="color:${color}">${it.project}</td><td>${it.type}</td><td>${it.cost||''}</td><td>${it.month||''}</td>`;
+    const td=document.createElement('td');
+    const b=document.createElement('button'); b.textContent='Bought'; b.onclick=()=>toggleBoughtDiyShop(it.id);
+    const del=document.createElement('button'); del.textContent='Delete'; del.onclick=()=>deleteDiyShopItem(it.id);
+    td.appendChild(b); td.appendChild(del); tr.appendChild(td); table.appendChild(tr);
+  });
+  div.appendChild(table);
+}
+
+function toggleBoughtDiyShop(id){
+  const it=diyShoppingList.find(i=>i.id===id); if(!it) return; it.bought=true; saveData(); renderDiyShopping();
+}
+
+function deleteDiyShopItem(id){
+  const idx=diyShoppingList.findIndex(i=>i.id===id); if(idx===-1) return; diyShoppingList.splice(idx,1); saveData(); renderDiyShopping();
 }
 
 loadData();
